Adjust width of story modal images to prevent horizontal scrollbar from appearing.

--- a/themes/custom/mat/sass/pages/_storiesapi.scss
+++ b/themes/custom/mat/sass/pages/_storiesapi.scss
@@ -623,6 +623,7 @@ $mobile-item-size: 100px;
 
     // Modal gallery
     .modal-gallery {
+      width: 100%;
       display: flex;
       max-height: 100px;
       margin-top: 4rem;
@@ -632,8 +633,12 @@ $mobile-item-size: 100px;
      -webkit-overflow-scrolling: touch;
 
       img {
-        height: 100px;
-        margin-right: 2rem;
+        max-height: 100px;
+        @media (min-width: $screen-sm-min) {
+          margin-right: 2rem;
+        }
+
+        max-width: 25%;
 
         &:last-child {
           margin-right: 0;
@@ -642,7 +647,17 @@ $mobile-item-size: 100px;
 
       #gallery {
         display: flex;
+        justify-content: flex-start;
         flex-shrink: 0;
+        width: 75%;
+
+        img {
+          max-height: 100px;
+          @media (min-width: $screen-sm-min) {
+            margin-right: 2rem;
+          }
+          max-width: 33.33%;
+        }
       }
     }
 
